--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "novay/laravel-word-template": "^1.1",
         "phpoffice/phpword": "^1.0",
         "yajra/laravel-datatables-oracle": "~9.0"
